<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/snow"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loggin"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eloggin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/loggin"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/epass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rpassword"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/epass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/rpassword"
                android:inputType="textPassword"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/whitesmoke"
                android:textSize="20sp" />
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rmale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textColor="@color/silver"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rfemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/silver"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/edate"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textColorHint="@color/snow"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tciudad"
                android:textColor="@color/snow"
                android:textSize="20sp" />


        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <Spinner
               android:id="@+id/sDepartamentos"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:layout_gravity="clip_horizontal"/>
           <Spinner
               android:id="@+id/sCiudades"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:layout_below="@+id/sDepartamentos"
               android:gravity="clip_horizontal"/>
           </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leer"
                android:id="@+id/cleer"
                android:textColor="@color/snow"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ajedrez"
                android:id="@+id/cajedrez"
                android:textColor="@color/snow"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yoga"
                android:id="@+id/cyoga"
                android:textColor="@color/snow"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nadar"
                android:id="@+id/cnadar"
                android:textColor="@color/snow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/baceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/goldenrod"
                android:onClick="aceptar"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tresumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/floralwhite"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>
